# fitness-data-chat

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: analytics.py  chat.py  garmin.py  strava.py
backend/app/database/: db.py
backend/app/models/: activity.py  user.py
backend/app/services/: analytics_service.py  garmin_service.py  llm_service.py  strava_service.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/chat/: ChatInterface.tsx  MessageInput.tsx  MessageList.tsx
frontend/components/dashboard/: ActivityChart.tsx  StatsCard.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/lib/: api.ts  utils.ts
